Refactor variable names in Gui classes
Renamed variables and methods for better clarity and consistency. `guiItems` and `slotActions` are now `itemsBySlot` and `actionsBySlot` respectively across all relevant classes. Adjusted method names to match these changes, improving readability and maintainability.